<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context="com.google.www.register_form.MainActivity">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/register_form"
    android:textSize="25sp"
    android:layout_marginBottom="25dp"
    android:layout_gravity="center"/>
    <EditText
        android:id="@+id/edtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:layout_marginBottom="10dp"
        android:maxLength="15"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edtfamily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_family"
        android:layout_marginBottom="10dp"
        android:maxLength="15"
        android:maxLines="1"/>
    <EditText
        android:id="@+id/edtpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:maxLength="8"
        android:maxLines="1"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_sex"
            android:textSize="15sp"
            android:layout_marginRight="90dp"/>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/man"/>

     <RadioButton
         android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female" />



</LinearLayout>
    <TextView
        android:id="@+id/txtshow"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btnreg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/register_button"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"/>
</LinearLayout>
